Fix overlapping of footer buttons (issue #3)

--- a/_docs/_styles/styles.styl
+++ b/_docs/_styles/styles.styl
@@ -647,11 +647,9 @@ footer
                 font Light 1.5rem FiraSans
             .buttons
                 position absolute
-                width 800px
                 top 0
                 left 50%
-                margin 10px 0 0 -400px
-                padding 25px 0 0 400px
+                margin 30px 0 0 100px
                 a
                     width 120px
                     font SemiBold 1.8rem FiraSans
